--- a/photo-manager.html
+++ b/photo-manager.html
@@ -49,7 +49,41 @@
                 <!-- Main Content Start  -->
                 <div class="main-content mt-3">
                     <div class="user-photo-manager-wrap">
-                        <div class="user-single-photo" style="background-image: url('assets/images/user/9.png');"></div>
+                        <div class="user-single-photo" style="background-image: url('assets/images/user/9.png');">
+                            <button type="button">
+                                <label for="fileInput">
+                                    <i class="ri-add-line"></i>
+                                </label>
+                                <input type="file" name="photo" id="fileInput">
+                            </button>
+                        </div>
+                        <div class="user-single-photo" style="background-image: url('assets/images/user/10.png');">
+                            <button type="button">
+                                <label for="fileInput">
+                                    <i class="ri-add-line"></i>
+                                </label>
+                                <input type="file" name="photo" id="fileInput">
+                            </button>
+                        </div>
+                        <div class="user-single-photo" style="">
+                            <button type="button">
+                                <label for="fileInput">
+                                    <i class="ri-add-line"></i>
+                                </label>
+                                <input type="file" name="photo" id="fileInput">
+                            </button>
+                        </div>
+                        <div class="user-single-photo" style="">
+                            <button type="button">
+                                <label for="fileInput">
+                                    <i class="ri-add-line"></i>
+                                </label>
+                                <input type="file" name="photo" id="fileInput">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="my-5 text-center">
+                        <button class="update-btn">Update</button>
                     </div>
                 </div>
                 <!-- Footer Menu Start  -->
