--- a/photo-manager.html
+++ b/photo-manager.html
@@ -65,7 +65,7 @@
                                 <input type="file" name="photo" id="fileInput">
                             </button>
                         </div>
-                        <div class="user-single-photo" style="">
+                        <div class="user-single-photo">
                             <button type="button">
                                 <label for="fileInput">
                                     <i class="ri-add-line"></i>
@@ -73,7 +73,7 @@
                                 <input type="file" name="photo" id="fileInput">
                             </button>
                         </div>
-                        <div class="user-single-photo" style="">
+                        <div class="user-single-photo">
                             <button type="button">
                                 <label for="fileInput">
                                     <i class="ri-add-line"></i>
