Activity menu fixed

--- a/my-match.html
+++ b/my-match.html
@@ -130,7 +130,7 @@
                                     style="background-image: url('assets/images/user/5.png');">
                                 </div>
                                 <div class="tinder--user-info">
-                                    <a href="user-dashboard.html">
+                                    <a href="user-profile.html">
                                         <h3>Abigall</h3>
                                     </a>
                                     <p>Cape Town</p>
@@ -153,7 +153,7 @@
                                     style="background-image: url('assets/images/user/1.png');">
                                 </div>
                                 <div class="tinder--user-info">
-                                    <a href="user-dashboard.html">
+                                    <a href="user-profile.html">
                                         <h3>Abigall</h3>
                                     </a>
                                     <p>Cape Town</p>
