--- a/user-profile.html
+++ b/user-profile.html
@@ -11,7 +11,9 @@
     <!-- ==== css ==== -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/index.css">
+
 </head>
 
 <body>
@@ -20,33 +22,41 @@
         <div class="preloader-circle"></div>
     </div>
 
-    <header class="header-wrap shadow-2 py-3">
-        <div class="container">
-            <div class="d-flex justify-content-between align-items-center">
-                <div>
-                    <button id="back-button">
-                        <img src="assets/images/icon/arrow-back.svg" alt="">
-                    </button>
-                </div>
-                <div class="d-flex">
-                    <div class="me-4">
-                        <a href="search.html">
-                            <i class="ri-search-line"></i>
-                        </a>
-                    </div>
-                    <div>
-                        <a href="notification.html">
-                            <i class="ri-notification-line"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-
     <!-- Main Content Start  -->
     <div class="main-content">
-
+        <div class="ag-format-container">
+            <div class="layout">
+                <button id="back-button">
+                    <img src="assets/images/icon/arrow-back.svg" alt="">
+                </button>
+                <ul class="slider">
+                    <li>
+                        <div class="img-slider" style="background-image: url(assets/images/user/1.png);"
+                            data-img="assets/images/user/1.png"></div>
+                    </li>
+                    <li>
+                        <div class="img-slider" style="background-image: url(assets/images/user/2.png);"
+                            data-img="assets/images/user/2.png"></div>
+                    </li>
+                    <li>
+                        <div class="img-slider" style="background-image: url(assets/images/user/3.png);"
+                            data-img="assets/images/user/3.png"></div>
+                    </li>
+                    <li>
+                        <div class="img-slider" style="background-image: url(assets/images/user/4.png);"
+                            data-img="assets/images/user/4.png"></div>
+                    </li>
+                    <li>
+                        <div class="img-slider" style="background-image: url(assets/images/user/5.png);"
+                            data-img="assets/images/user/5.png"></div>
+                    </li>
+                    <li>
+                        <div class="img-slider" style="background-image: url(assets/images/user/6.png);"
+                            data-img="assets/images/user/6.png"></div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
     <!-- Footer Menu Start  -->
     <div class="footer-bg">
@@ -85,6 +95,7 @@
     <!-- ==== Script File ==== -->
     <script src="assets/js/jquery-3.6.4.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/slick.min.js"></script>
     <script src="assets/js/app.js"></script>
     <!-- Arrow Back -->
     <script>
@@ -92,6 +103,22 @@
 
         backButton.addEventListener("click", function () {
             history.back();
+        });
+    </script>
+
+    <!-- User Slider  -->
+    <script>
+        $('.slider').slick({
+            dots: true,
+            infinite: false,
+            speed: 500,
+            fade: true,
+            cssEase: 'linear',
+            arrows: false,
+            customPaging: function (slick, index) {
+                var targetImage = slick.$slides.eq(index).find('div').data('img');
+                return '<img src=" ' + targetImage + ' " />';
+            }
         });
     </script>
 </body>
