Tinder Heigt Fixed

--- a/slider.html
+++ b/slider.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/index.css">
 
     <style>
-        .ag-format-container {
+        .user-photo-slider-container {
             width: 100%;
             margin: 0 auto;
         }
@@ -105,7 +105,7 @@
 
     <!-- Main Content Start  -->
     <div class="main-content">
-        <div class="ag-format-container">
+        <div class="user-photo-slider-container">
             <div class="layout">
                 <ul class="slider">
                     <li>
