--- a/user-profile.html
+++ b/user-profile.html
@@ -24,7 +24,7 @@
 
     <!-- Main Content Start  -->
     <div class="main-content">
-        <div class="ag-format-container">
+        <div class="user-photo-slider-container">
             <div class="layout">
                 <button id="back-button">
                     <img src="assets/images/icon/arrow-back.svg" alt="">
@@ -55,6 +55,21 @@
                             data-img="assets/images/user/6.png"></div>
                     </li>
                 </ul>
+            </div>
+        </div>
+        <div class="user-profile-info-wrap">
+            <div class="container">
+                <div class="header">
+                    <div class="d-flex">
+                        <div>
+                            <h3>Shaan Megh</h3>
+                            <p>
+                                <i class="ri-user-location-fill"></i>
+                                New-York, 25km.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
