Todays Match new slider and height width no scroll issue fixed with real device

--- a/todays-match.html
+++ b/todays-match.html
@@ -49,6 +49,57 @@
                     <div class="activity-slider">
                         <div class="mr-slider-wrap  bg-danger slider-full-height rounded-4">
                             <div class="mr-slider-dp rounded-4"
+                                style="background-image: url('assets/images/user/2.png');">
+                                <div class="d-flex justify-content-between flex-column h-100">
+                                    <div class="text-end">
+                                        <div class="dropdown">
+                                            <button class="mr-more-btn" data-bs-toggle="dropdown" aria-expanded="false">
+                                                <i class="ri-more-2-fill"></i>
+                                            </button>
+                                            <ul class="dropdown-menu">
+                                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="text-center">
+
+                                    </div>
+                                    <div class="mr-user-info">
+                                        <div class="ms-3 mb-2">
+                                            <a href="user-profile.html">
+                                                <h4>xshaanx <b>-</b> <span id="">35</span> </h4>
+                                            </a>
+                                            <p>
+                                                <i class="ri-user-location-fill"></i>
+                                                Orlando, usa
+                                            </p>
+                                        </div>
+                                        <div
+                                            class="user-info-interact d-flex justify-content-evenly align-items-center mb-2">
+                                            <div>
+                                                <button><img src="assets/images/icon/slider/send-credit.svg"
+                                                        alt=""></button>
+                                            </div>
+                                            <div>
+                                                <a href="message.html"><img src="assets/images/icon/slider/message.svg"
+                                                        alt=""></a>
+                                            </div>
+                                            <div>
+                                                <button><img src="assets/images/icon/slider/love.svg" alt=""></button>
+                                            </div>
+                                            <div>
+                                                <button><img src="assets/images/icon/slider/send-gift.svg"
+                                                        alt=""></button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mr-slider-wrap  bg-danger slider-full-height rounded-4">
+                            <div class="mr-slider-dp rounded-4"
                                 style="background-image: url('assets/images/user/blur.png');">
                                 <div class="d-flex justify-content-between flex-column h-100">
                                     <div class="text-end">
@@ -108,7 +159,109 @@
                         </div>
                         <div class="mr-slider-wrap  bg-danger slider-full-height rounded-4">
                             <div class="mr-slider-dp rounded-4"
-                                style="background-image: url('assets/images/user/2.png');">
+                                style="background-image: url('assets/images/user/3.png');">
+                                <div class="d-flex justify-content-between flex-column h-100">
+                                    <div class="text-end">
+                                        <div class="dropdown">
+                                            <button class="mr-more-btn" data-bs-toggle="dropdown" aria-expanded="false">
+                                                <i class="ri-more-2-fill"></i>
+                                            </button>
+                                            <ul class="dropdown-menu">
+                                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="text-center">
+
+                                    </div>
+                                    <div class="mr-user-info">
+                                        <div class="ms-3 mb-2">
+                                            <a href="user-profile.html">
+                                                <h4>xshaanx <b>-</b> <span id="">35</span> </h4>
+                                            </a>
+                                            <p>
+                                                <i class="ri-user-location-fill"></i>
+                                                Orlando, usa
+                                            </p>
+                                        </div>
+                                        <div
+                                            class="user-info-interact d-flex justify-content-evenly align-items-center mb-2">
+                                            <div>
+                                                <button><img src="assets/images/icon/slider/send-credit.svg"
+                                                        alt=""></button>
+                                            </div>
+                                            <div>
+                                                <a href="message.html"><img src="assets/images/icon/slider/message.svg"
+                                                        alt=""></a>
+                                            </div>
+                                            <div>
+                                                <button><img src="assets/images/icon/slider/love.svg" alt=""></button>
+                                            </div>
+                                            <div>
+                                                <button><img src="assets/images/icon/slider/send-gift.svg"
+                                                        alt=""></button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mr-slider-wrap  bg-danger slider-full-height rounded-4">
+                            <div class="mr-slider-dp rounded-4"
+                                style="background-image: url('assets/images/user/4.png');">
+                                <div class="d-flex justify-content-between flex-column h-100">
+                                    <div class="text-end">
+                                        <div class="dropdown">
+                                            <button class="mr-more-btn" data-bs-toggle="dropdown" aria-expanded="false">
+                                                <i class="ri-more-2-fill"></i>
+                                            </button>
+                                            <ul class="dropdown-menu">
+                                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="text-center">
+
+                                    </div>
+                                    <div class="mr-user-info">
+                                        <div class="ms-3 mb-2">
+                                            <a href="user-profile.html">
+                                                <h4>xshaanx <b>-</b> <span id="">35</span> </h4>
+                                            </a>
+                                            <p>
+                                                <i class="ri-user-location-fill"></i>
+                                                Orlando, usa
+                                            </p>
+                                        </div>
+                                        <div
+                                            class="user-info-interact d-flex justify-content-evenly align-items-center mb-2">
+                                            <div>
+                                                <button><img src="assets/images/icon/slider/send-credit.svg"
+                                                        alt=""></button>
+                                            </div>
+                                            <div>
+                                                <a href="message.html"><img src="assets/images/icon/slider/message.svg"
+                                                        alt=""></a>
+                                            </div>
+                                            <div>
+                                                <button><img src="assets/images/icon/slider/love.svg" alt=""></button>
+                                            </div>
+                                            <div>
+                                                <button><img src="assets/images/icon/slider/send-gift.svg"
+                                                        alt=""></button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mr-slider-wrap  bg-danger slider-full-height rounded-4">
+                            <div class="mr-slider-dp rounded-4"
+                                style="background-image: url('assets/images/user/5.png');">
                                 <div class="d-flex justify-content-between flex-column h-100">
                                     <div class="text-end">
                                         <div class="dropdown">
