SLdier button height issue fixed

--- a/todays-match.html
+++ b/todays-match.html
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="col-12">
                 <!-- Main Content Start  -->
-                <div class="main-content">
+                <div class="main-content no-padding">
                     <!-- Main Slider  -->
                     <div class="activity-slider">
                         <div class="mr-slider-wrap  bg-danger slider-full-height rounded-4">
@@ -69,7 +69,7 @@
                                     <div class="mr-user-info">
                                         <div class="ms-3 mb-2">
                                             <a href="user-profile.html">
-                                                <h4>xshaanx <b>-</b> <span id="">35</span> </h4>
+                                                <h4>xshaanxs <b>-</b> <span id="">35</span> </h4>
                                             </a>
                                             <p>
                                                 <i class="ri-user-location-fill"></i>
@@ -86,7 +86,7 @@
                                                 <a href="message.html"><img src="assets/images/icon/slider/message.svg"
                                                         alt=""></a>
                                             </div>
-                                            <div>
+                                            <div style="margin-top: 0.35rem !important;">
                                                 <button><img src="assets/images/icon/slider/love.svg" alt=""></button>
                                             </div>
                                             <div>
@@ -145,7 +145,7 @@
                                                 <a href="message.html"><img src="assets/images/icon/slider/message.svg"
                                                         alt=""></a>
                                             </div>
-                                            <div>
+                                            <div style="margin-top: 0.35rem !important;">
                                                 <button><img src="assets/images/icon/slider/love.svg" alt=""></button>
                                             </div>
                                             <div>
@@ -196,7 +196,7 @@
                                                 <a href="message.html"><img src="assets/images/icon/slider/message.svg"
                                                         alt=""></a>
                                             </div>
-                                            <div>
+                                            <div style="margin-top: 0.35rem !important;">
                                                 <button><img src="assets/images/icon/slider/love.svg" alt=""></button>
                                             </div>
                                             <div>
@@ -247,7 +247,7 @@
                                                 <a href="message.html"><img src="assets/images/icon/slider/message.svg"
                                                         alt=""></a>
                                             </div>
-                                            <div>
+                                            <div style="margin-top: 0.35rem !important;">
                                                 <button><img src="assets/images/icon/slider/love.svg" alt=""></button>
                                             </div>
                                             <div>
@@ -298,7 +298,7 @@
                                                 <a href="message.html"><img src="assets/images/icon/slider/message.svg"
                                                         alt=""></a>
                                             </div>
-                                            <div>
+                                            <div style="margin-top: 0.35rem !important;">
                                                 <button><img src="assets/images/icon/slider/love.svg" alt=""></button>
                                             </div>
                                             <div>
