User profile header

--- a/user-profile.html
+++ b/user-profile.html
@@ -75,9 +75,42 @@
                             </div>
                         </div>
                     </div>
+                    <div class="d-flex justify-content-between align-items-center rounded-4 user-interact">
+                        <div>
+                            <button tabindex="0"><img src="assets/images/icon/slider/send-credit.svg" alt=""></button>
+                        </div>
+                        <div>
+                            <a href="message.html" tabindex="0">
+                                <button>
+                                    <img src="assets/images/icon/slider/message.svg" alt="">
+                                </button>
+                            </a>
+                        </div>
+                        <div>
+                            <button tabindex="0"><img src="assets/images/icon/slider/love.svg" alt=""></button>
+                        </div>
+                        <div>
+                            <button tabindex="0"><img src="assets/images/icon/slider/send-gift.svg" alt=""></button>
+                        </div>
+                    </div>
+                    <div class="user-tag-pills">
+                        <p>34 Year</p>
+                        <p>Bengali</p>
+                        <p>Never Married</p>
+                        <p>5ft 6inch</p>
+                        <p>Muslim</p>
+                    </div>
+                    <div class="user-bio rounded-4 p-2 mt-3">
+                        <p>
+                            Take a quick look at our starting guide where we easily explain how to use our interface
+                            icons, download, use CSS, switch styles, and more! We listen to you. Have you had any
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
+    </div>
     </div>
     <!-- Footer Menu Start  -->
     <div class="footer-bg">
