--- a/user-profile.html
+++ b/user-profile.html
@@ -93,18 +93,81 @@
                             <button tabindex="0"><img src="assets/images/icon/slider/send-gift.svg" alt=""></button>
                         </div>
                     </div>
-                    <div class="user-tag-pills">
+                    <div class="user-tag-pills mt-3">
                         <p>34 Year</p>
                         <p>Bengali</p>
                         <p>Never Married</p>
                         <p>5ft 6inch</p>
                         <p>Muslim</p>
                     </div>
-                    <div class="user-bio rounded-4 p-2 mt-3">
+                    <div class="user-bio rounded-4 mt-3">
                         <p>
                             Take a quick look at our starting guide where we easily explain how to use our interface
                             icons, download, use CSS, switch styles, and more! We listen to you. Have you had any
                         </p>
+                    </div>
+                </div>
+                <div class="user-profile-inner-widget-wrap ">
+                    <div class="user-profile-inner-widget mt-3">
+                        <div class="user-profile-inner-widget-header">
+                            <h3>Family Details</h3>
+                        </div>
+                        <div class="user-profile-inner-widget-body">
+                            <p>
+                                Ours is an affluent family. Her father runs a business and her mother is a homemaker.
+                                She
+                                has 2
+                                sisters (1 married).
+                            </p>
+                        </div>
+                    </div>
+                    <div class="user-profile-inner-widget  mt-3">
+                        <div class="user-profile-inner-widget-header">
+                            <h3>Lifestyle</h3>
+                        </div>
+                        <div class="user-profile-inner-widget-body">
+                            <div class="user-tag-pills">
+                                <p>Non-Vegeterian</p>
+                                <p>No-Smoking</p>
+                                <p>Don't-Drink</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user-profile-inner-widget  mt-3">
+                        <div class="user-profile-inner-widget-header">
+                            <h3>Contact Details</h3>
+                        </div>
+                        <div class="user-profile-inner-widget-body">
+                            <h3>Email</h3>
+                            <span>contact@doamin.com</span>
+                            <h3>Phone</h3>
+                            <span>+880123456789</span>
+                        </div>
+                    </div>
+                    <div class="user-profile-inner-widget  mt-3">
+                        <div class="user-profile-inner-widget-header">
+                            <h3>Background</h3>
+                        </div>
+                        <div class="user-profile-inner-widget-body">
+                            <span><i class="ri-global-fill"></i> Muslim, Bengali</span>
+                            <span><i class="ri-user-location-line"></i> Grew Up Bangladesh</span>
+                            <span><i class="ri-map-pin-2-line"></i> Lives in (Citizen)</span>
+                        </div>
+                    </div>
+                    <div class="user-profile-inner-widget  mt-3">
+                        <div class="user-profile-inner-widget-header">
+                            <h3>Education</h3>
+                        </div>
+                        <div class="user-profile-inner-widget-body">
+                            <span><i class="ri-global-fill"></i> Masters</span>
+                            <span><i class="ri-user-location-line"></i> Arts</span>
+                            <span><i class="ri-map-pin-2-line"></i> Not Working</span>
+                        </div>
+                    </div>
+                    <div class="mt-3">
+                        <a class="matches-btn" href="matches.html">
+                            MATCHES
+                        </a>
                     </div>
                 </div>
             </div>
