Matches page done with animition

--- a/matches.html
+++ b/matches.html
@@ -29,17 +29,19 @@
             </button>
         </div>
         <div class="matches-body">
-            <h1>It's a Match!</h1>
-            <p>
+            <h1 class="vivify delay-900 popIn">It's a Match!</h1>
+            <p class="vivify delay-900 popIn">
                 You & <span>Elizabeth</span> have liked each other.
             </p>
             <div class="both-matches-dp mt-5">
-                <div class="matches-dp me-2" style="background-image: url('assets/images/user/2.png');"></div>
-                <div class="single-skill">
+                <div class="matches-dp me-2 vivify delay-700 popIn"
+                    style="background-image: url('assets/images/user/2.png');"></div>
+                <div class="single-skill  vivify delay-600 popIn">
                     <div class="circlechart" data-percentage="60">
                     </div>
                 </div>
-                <div class="matches-dp ms-2" style="background-image: url('assets/images/user/4.png');"></div>
+                <div class="matches-dp ms-2 vivify delay-800 popIn"
+                    style="background-image: url('assets/images/user/4.png');"></div>
             </div>
             <div class="matches-btn">
                 <a href="message.html">Message Her</a>
